--- a/05-example-web-application/client-react/Dockerfile
+++ b/05-example-web-application/client-react/Dockerfile
@@ -1,21 +1,23 @@
 FROM node:20.11.1-alpine3.19 AS build
 
-WORKDIR /app
+WORKDIR /usr/src/app
 
-COPY package.json ./
+COPY package*.json ./
 
-RUN yarn install
+RUN --mount=type=cache,target=/usr/src/app/.npm \
+    npm set cache /usr/src/app/.npm && \
+    npm ci
 
 ENV PATH /app/node_modules/.bin:$PATH
 
 COPY . .
 
-RUN yarn run build
+RUN npm run build 
 
 FROM nginx:1.25.4-alpine3.18
 
 COPY ./nginx.conf /etc/nginx/conf.d/default.conf
-COPY --from=build /app/dist /var/www/html/
+COPY --from=build /usr/src/app/dist /var/www/html/
 
 EXPOSE 3000
 
